# codewars

./: CMakeLists.txt  Convert a string to an array.cpp  Grasshopper - Grade book.cpp  My head is at the wrong end!.cpp  Reversed Words.cpp  Thinkful - Logic Drills Traffic light.cpp  Total amount of points.cpp
level1/: 101 Dalmatians - squash the bugs, not the dogs!.cpp  Abbreviate a Two Word Name.cpp  All Star Code Challenge #18.cpp  Area or Perimeter.cpp  Array plus array.cpp  Basic Mathematical Operations.cpp  Beginner - Reduce but Grow.cpp  Beginner Series #1 School Paperwork.cpp  Beginner Series #2 Clock.cpp  Calculate average.cpp  Century From Year.cpp  Collatz Conjecture (3n+1).CPP  Convert a Boolean to a String.cpp  Convert a Number to a String!.cpp  Convert number to reversed array of digits.cpp  Correct the mistakes of the character recognition software.cpp  Count of positives  sum of negatives.cpp  Count the Monkeys!.cpp  Counting sheep.cpp  DNA to RNA Conversion.cpp  Do I get a bonus.cpp  Drink about.cpp  Even Or Odd.cpp  Exclamation marks series 11 Replace all vowel to exclamation mark in the sentence.cpp  Expressions Matter.cpp  Fake Binary.cpp  Find Maximum and Minimum Values of a List.cpp  Find numbers which are divisible by given number.cpp  Find the smallest integer in the array.cpp  Get Nth Even Number.cpp  Get Planet Name By ID.cpp  Get the mean of an array.cpp  Grasshopper - Summation.cpp  Grasshopper - Terminal game combat function.cpp  How good are you really.cpp  If you can't sleep, just count sheep!!.cpp  Invert values.cpp  Is it a palindrome.cpp  (+37 more)
(+13 files in other folders)
